<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dailymeal"
        android:name="com.example.myapplication.ui.dailymeal.DailyMealFragment"
        android:label="@string/dailymeal"
        tools:layout="@layout/dailymealfragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.myapplication.ui.favourite.Favouritefragment"
        android:label="@string/favourite"
        tools:layout="@layout/favouritefragment" />
    <fragment
        android:id="@+id/nav_MyCart"
        android:name="com.example.myapplication.ui.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>